Completed Card, Deck, and Timer classes with corresponding tests for funsies.