@@ -31,12 +31,12 @@ application {
 }
 
 javafx {
-    version = '21.0.6'
+    version = '21'
     modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.media']
 }
 
 dependencies {
-    implementation "org.openjfx:javafx-controls:21.0.6"
+    implementation "org.openjfx:javafx-controls:21"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
@@ -46,15 +46,28 @@ test {
     useJUnitPlatform()
 }
 
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
-    }
+tasks.register('runVisualTimerTest', JavaExec) {
+    group = 'application'
+    description = 'Runs the TimerVisualTest JavaFX UI'
+
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass.set('com.ood.groupOne.card_guessing_game.TimerVisualTest')
+
+    jvmArgs = [
+            '--module-path', "${System.getenv('JAVA_FX_LIB')}",
+            '--add-modules', 'javafx.controls,javafx.base'
+    ]
 }
 
-jlinkZip {
-    group = 'distribution'
-}
+//jlink {
+//    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+//    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+//    launcher {
+//        name = 'app'
+//    }
+//}
+
+//jlinkZip {
+//    group = 'distribution'
+//}
 
